gcp-iac/k8s_manifests/frontend-deployment.yml
# Deployment for frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: europe-central2-docker.pkg.dev/ersms-25l-462511/ersms-app-test/frontend
          ports:
            - containerPort: 3000
---
# LoadBalancer Service for frontend
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer # Use LoadBalancer to expose frontend to the internet
  ports:
    - port: 80 # External port
      targetPort: 3000 # Internal container port
  selector:
    app: frontend
