gcp-iac/k8s_manifests/transaction-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
        - name: transaction-service
          image: europe-central2-docker.pkg.dev/ersms-25l-462511/ersms-app-test/transaction-service
          ports:
            - containerPort: 8000 # Internal container port
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  annotations:
    cloud.google.com/load-balancer-type: 'external' # Specifies the load balancer as external
spec:
  type: LoadBalancer

  selector:
    app: transaction-service
  ports:
    - port: 8002 # External port for the service
      targetPort: 8000 # Internal container port
